--- a/setting.yaml
+++ b/setting.yaml
@@ -1,7 +1,7 @@
-nc: 1
-classes: 'class.txt'
+classes: 'class.txt'                              # write here
+network: 'vgg16'                                  # write here ('vgg16' or 'vgg19')
 
-network: 'vgg16'   # vgg16 or vgg19
+nc: 1
 img_size: [224, 224, 3]
 workers: 4
 
@@ -23,9 +23,10 @@ fc_layer:
   [4096, 4096]
 
 DATASET:
-  root_path: '/Users/bolero/dc/dataset/cifar10'
-  ext: 'png'
+  root_path: '/Users/bolero/dc/dataset/cifar10'   # write here
+  ext: 'png'                                      # write here
 
 TRAIN:
+  exp: 'run'                                      # write here
   factor: 0.1
   patience: 5
